--- a/index.html
+++ b/index.html
@@ -17,13 +17,26 @@
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
     <body class="noselect">
-    <canvas id="canvas"></canvas><div id="count">0</div>
+
         <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <!-- Div for accepting clicks. Expands entire size of screen -->
+        <div id="canvas"></div>
+
+
+        <div id="content">
+            <h1>Welcome to ClickRacer!</h1>
+            <div id="count">0</div>
+        </div>
+
+
+
+
+
+
+
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.1.min.js"><\/script>')</script>
