Fit both the counter and the menu on the screen
Also struggled to get the counter to fit both x and y window size ranges

--- a/index.html
+++ b/index.html
@@ -16,28 +16,30 @@
         <link rel="stylesheet" href="css/main.css">
         <script src="js/vendor/modernizr-2.6.2.min.js"></script>
     </head>
-    <body class="noselect">
+    <body>
+        <div id="container" class="container noselect">
 
-        <!--[if lt IE 7]>
-        <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+            <!--[if lt IE 7]>
+            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+            <![endif]-->
 
-        <!-- Div for accepting clicks. Expands entire size of screen -->
-        <div id="canvas"></div>
+            <!-- Div for accepting clicks. Expands entire size of screen -->
+            <div id="canvas"></div>
+
+            <div id="count">105</div>
+
+            <div id="content">
+                <h1>Welcome to ClickRacer!</h1>
+                <p>START</p>
+            </div>
 
 
-        <div id="content">
-            <h1>Welcome to ClickRacer!</h1>
-            <div id="count">0</div>
+
+
+
+
+
         </div>
-
-
-
-
-
-
-
-
         <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-2.1.1.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
