New fonts! Roboto and Code

--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
             <!-- Div for accepting clicks. Expands entire size of screen -->
             <div id="canvas"></div>
 
-            <div id="count">105</div>
+            <div id="count">0</div>
 
             <div id="content">
                 <h1>Welcome to ClickRacer!</h1>
-                <p>START</p>
+                <span id="start">START</span>
             </div>
 
 
