Fixed up game over functionality
After the time runs out the GameOver overlay comes up showing the score and disables clicking. Pressing play again reloads the main page.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
 
             <div id="count">0</div>
 
-            <div id="content">
+            <div id="finish" class="overlay">
+                <h1>Game Over</h1>
+                <p>Score: <span id="score"></span></p>
+                <span id="again">PLAY AGAIN</span>
+            </div>
+
+            <div id="content" class="overlay">
                 <h1>Welcome to ClickRacer!</h1>
                 <span id="start">START</span>
             </div>
